manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects-bkp
  namespace: openproject
  labels:
    app: projects-bkp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects-bkp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: projects-bkp
    spec:
      containers:
      - image: harbor.domain.com.br/openproject-api/projects-bkp:1.3
        name: projects-bkp
        ports:
        - containerPort: 5000
          name: http
        volumeMounts:
        - name: data
          mountPath: /backup
        resources:
          requests:
            memory: 128Mi
            cpu: 125m
          limits:
            memory: 500Mi
            cpu: 500m
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: openproject
      imagePullSecrets:
      - name: harbor
