manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: openproject
  name: svc-projects-bkp
  labels:
    app: projects-bkp
spec:
  selector:
    app: projects-bkp
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
